# TestingPythonPackages

./: README.md  setup.cfg
dagster/: config.yaml  data.csv  simple_pipeline.py  solids.py  test_pipeline.py
example/: XXX_010521_310521.csv  configuration.py  custom_configuration.py  run_transform.py
src/first_package/: __init__.py  apply_configuration.py  reference_data.py  transformations.py  utils.py  validators.py
