[metadata]
name = test_package
version = 0.0.1
author = Gemma Down
author_email = gemmalsdown@icloud.com
url = https://github.com/glsdown/
description = This is a basic python package outline.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = template, package
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.5
package_dir=
    =src
packages=find:
setup_requires =
    setuptools
install_requires =
    numpy
    pandas

[options.packages.find]
where=src